--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>DreamsTour</title>
     <link rel="stylesheet" href="dreamtour.css" />
 
   <script src="dreamtour.js"></script>
@@ -34,43 +34,45 @@
             <div class="menu ">
               <ul class="menu-list">
                 <li class="menu-options">
-                  <a href="" class="list-options">Home</a>
+                  <a href="/" class="list-options">Home</a>
                 </li>
                 <li class="menu-options">
-                  <a href="" class="list-options">Flight</a>
+                  <a href="#" class="list-options">Flight</a>
                 </li>
                 <li class="menu-options">
-                  <a href="" class="list-options">Hotel</a>
+                  <a href="#" class="list-options">Hotel</a>
                 </li>
                 <li class="menu-options">
-                  <a href="" class="list-options">Car</a>
+                  <a href="#" class="list-options">Car</a>
                 </li>
                 <li class="menu-options">
-                  <a href="" class="list-options">Cruise</a>
+                  <a href="#" class="list-options">Cruise</a>
                 </li>
                 <li class="menu-options">
-                  <a href="" class="list-options">Tour</a>
+                  <a href="#" class="list-options">Tour</a>
                 </li>
                 <li class="menu-options">
-                  <a href="" class="list-options" >Pages</a>
+                  <a href="#" class="list-options" >Pages</a>
                 </li>
                 <li class="menu-options">
-                  <a href=""class="list-options">Dashboard</a>
+                  <a href="#" class="list-options">Dashboard</a>
+                </li>
+                <li class="cut-nevbar">
+                  <a href="javascript:void(0)" class="list-options" onclick="cutnavbar()"><i class="fa-solid fa-xmark"></i></a>
                 </li>
               </ul>
             </div>
             <div class="header-last">
               <a href="javascript:void(0)" class="sign-btt" onclick="showPopup()">Enquire Now<i class="fa-solid fa-chevron-right"></i></a>
             </div>
-            <div class="header-last-mb">
-              <i class="fa-solid fa-bars"></i>
+            <div class="open-navbar">
+              <a class="text-decoration-none text-black" onclick="opennavbar()"><i class="fa-solid fa-bars"></i></a>
             </div>
           </div>
         </header>
       </div>
-    
       <section class="hero-section-1">
-        <div class="container py-5 mt-5">
+        <div class="container py-md-5 mt-md-5">
           <div class="row">
             <div class="col-12 col-md-8 col-lg-7 py-5" style="color: white;">
               <p class="fs-1 fw-bolder">
@@ -94,36 +96,36 @@
                 <hr>
                 <p class="fs-4 mb-0 ms-1">Search For Cruise</p>
                   <div class="row pb-5 pt-3 px-3 search-for-cruise" >
-                    <div class="col"  style="border: 1px solid rgba(78, 78, 78, 0.45);">
+                    <div class="col-12 col-md"style="border: 1px solid rgba(78, 78, 78, 0.45);">
                       <div class="pt-3">
                       <p class="mb-3">Destination</p>
                       <p class="mb-1 h4">Newyork</p>
                       <p class="mb-0">USA</p>
                     </div>
                     </div>
-                    <div class="col"  style="border: 1px solid rgba(78, 78, 78, 0.45);">
+                    <div class="col-12 col-md"style="border: 1px solid rgba(78, 78, 78, 0.45);">
                       <div class="pt-3">
                       <p class="mb-3">Start</p>
                       <input type="date">
                       <p class="mt-2">Monday</p>
                       </div>
                     </div>
-                    <div class="col"  style="border: 1px solid rgba(78, 78, 78, 0.45);">
+                    <div class="col-12 col-md"  style="border: 1px solid rgba(78, 78, 78, 0.45);">
                       <div class="pt-3">
                       <p class="mb-3">End</p>
                       <input type="date" placeholder="21-10-2025">
                       <p class="mt-2">Monday</p>
                       </div>
                     </div>
-                    <div class="col"  style="border: 1px solid rgba(78, 78, 78, 0.45);">
+                    <div class="col-12 col-md"  style="border: 1px solid rgba(78, 78, 78, 0.45);">
                       <div class="pt-3">
                       <p class="mb-3">Travellers & Cabbin</p>
                       <p class="mb-2"><span class="h4">4</span> Persons</p>
                       <p class="mb-0">4Adult,2Rooms</p>
                     </div>
                     </div>
-                    <div class="col-1 search-a-cruise"  > 
-                      <button class="py-5 px-3 ms-2 me-3 mb-0  fs-5" style="border: 0px; border-radius: 10px; background-color: #D4483B; color: #fff; height: 100%;">Search</button>
+                    <div class="col-md-1 search-a-cruise d-flex justify-content-center"> 
+                      <button class="py-md-5 mt-2 py-2 px-3 px-md-3 ms-md-2 me-md-3 mb-0  fs-5" style="border: 0px; border-radius: 10px; background-color: #D4483B; color: #fff; height: 100%;">Search</button>
                     </div>
                   </div>
               </div>
@@ -646,7 +648,7 @@
     <!-- pop-up maker -->
 
       <div id="popupbox" class="container" style="display: none;" >
-      <div class="container" style="display: flex; justify-content: center; height: 500px; width: 100%;" >
+      <div class="container popup-container">
       <div class="row pop-up bg-white" style="text-align: center;">
         <div class="col">
           <a href="javascript:void(0)" id="cutpopup" style="color: #000;"><i class="fa-solid fa-circle-xmark" style="right: 10px;"></i></a>
@@ -708,6 +710,12 @@
   ]
 });
    });
+   function opennavbar(){
+    document.querySelector(".menu-list").style.display="block";
+   }
+   function cutnavbar(){
+    document.querySelector(".menu-list").style.display="none";
+   }
    setTimeout(cutpopup,6000);
    function cutpopup() {
     document.querySelector("#popupbox").style.display = "flex";
